# cmake-python-distributions

./: .gitignore  CMakeLists.txt  constraints-ci.txt  pyproject.toml
.github/workflows/: build.yml  update-dependencies.yml
docker-images/: Dockerfile
scripts/: manylinux-build-and-install-openssl.sh
